--- a/forms.html
+++ b/forms.html
@@ -92,7 +92,7 @@
                         <option>Large</option>
                     </select>
                     <input type="number" value="1">
-                    <button class="buy-btn"><a href="checkout.html">Add to Car</a></button>
+                    <button class="buy-btn"><a href="checkout.html">Add to Cart</a></button>
                     <h4 class="details mt-5 mb-4">Product Details</h4>
                     <span>Delaya outer
                         Bahan moscrepe/wolfis
